[gd_scene load_steps=7 format=2]

[ext_resource path="res://Src/Actionable.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Cashier.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.2, 0.952941, 0.0196078, 1 )

[sub_resource type="BoxShape" id=2]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1, 0.8 )

[node name="Cashier" type="Spatial"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="StaticBody" type="StaticBody" parent="MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="MeshInstance/StaticBody"]
shape = SubResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.502351 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="Actionable" parent="." instance=ExtResource( 1 )]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
[connection signal="action_from_player" from="Actionable" to="." method="_on_Actionable_action_from_player"]
[connection signal="action_released" from="Actionable" to="." method="_on_Actionable_action_released"]
